--- a/assets/css/base.css
+++ b/assets/css/base.css
@@ -24,9 +24,9 @@ article, aside, details, figcaption, figure,
 footer, header, hgroup, menu, nav, section, main {
 	display: block;
 }
-body {
-	line-height: 1;
-}
+/*body {*/
+	/*line-height: 1;*/
+/*}*/
 ol, ul {
 	list-style: none;
 }
@@ -78,7 +78,7 @@ h4{font-size:1.5em;margin:0.5em 0em;}
 
 @media (min-width: 1200px) {
   .container {
-    width: 1170px;
+    width: 1270px;
   }
 }
 
@@ -262,6 +262,8 @@ h4{font-size:1.5em;margin:0.5em 0em;}
   }
   .col-sm-12 {
     width: 100%;
+    padding-left: 2rem;
+    padding-top: 0.5rem;
   }
   .col-sm-11 {
     width: 91.66666667%;
@@ -1445,8 +1447,8 @@ button::-moz-focus-inner {
 }
 
 *::after, *::before {
-  content: '';
-}
+   content: none;
+ }
 
 .topBar{background-color:#f5f5f5;padding:10px 0px;position:fixed;top:0;width:100%;color: #2e292f;border-top:solid 8px #03a9f4; }
 .topBar h1{font-size:16px;margin:0;padding:0;font-weight:normal;padding-top:5px;float:left;}
@@ -1636,6 +1638,7 @@ button::-moz-focus-inner {
   /* this fixes a bug where pseudo elements are slighty off position */
   -webkit-backface-visibility: hidden;
   backface-visibility: hidden;
+  content: '';
 }
 .cd-panel-close::before {
   -webkit-transform: rotate(45deg);
